syntax = "proto3";

option go_package = "github.com/LagrangeDev/LagrangeGo/pkg/pb/message";

message ForwardHead {
  optional uint32 Field1 = 1;
  optional uint32 Field2 = 2;
  optional uint32 Field3 = 3; // for friend: 2, for group: null
  optional string UnknownBase64 = 5;
  optional string Avatar = 6;
}

message Grp {
  optional uint32 GroupCode = 1;
}

message GrpTmp {
  optional uint32 GroupUin = 1;
  optional uint32 ToUin = 2;
}

message ResponseForward {
  optional string FriendName = 6;
}

message ResponseGrp {
  uint32 GroupUin = 1;
  string MemberName = 4;
  string GroupName = 7;
}

message Trans0X211 {
  optional uint64 ToUin = 1;
  optional uint32 CcCmd = 2;
  optional string Uid = 8;
}

message WPATmp {
  uint64 ToUin = 1;
  bytes Sig = 2;
}
